--- a/triton_fire_management_app/pubspec.yaml
+++ b/triton_fire_management_app/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/kz_2.json
     - assets/icons/home.png
     - assets/icons/map.png
   #   - images/a_dot_ham.jpeg
