Display news from parser

--- a/triton_fire_management_app/android/app/src/main/AndroidManifest.xml
+++ b/triton_fire_management_app/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="https" />
+        </intent>
+        <intent>
+            <action android:name="android.intent.action.DIAL" />
+            <data android:scheme="tel" />
+        </intent>
+        <intent>
+            <action android:name="android.intent.action.SEND" />
+            <data android:mimeType="*/*" />
+        </intent>
+    </queries>
     <application
         android:label="triton_fire_management_app"
         android:name="${applicationName}"
@@ -30,17 +44,4 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
-    <!-- Provide required visibility configuration for API level 30 and above -->
-    <queries>
-    <!-- If your app checks for SMS support -->
-    <intent>
-        <action android:name="android.intent.action.VIEW" />
-        <data android:scheme="sms" />
-    </intent>
-    <!-- If your app checks for call support -->
-    <intent>
-        <action android:name="android.intent.action.VIEW" />
-        <data android:scheme="tel" />
-    </intent>
-    </queries>
 </manifest>
