--- a/triton_fire_management_app/pubspec.yaml
+++ b/triton_fire_management_app/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
   assets:
     - assets/kz_1.json
     - assets/kz_2.json
+    - assets/news.json
     - assets/icons/home.png
     - assets/icons/map.png
   #   - images/a_dot_ham.jpeg
